clean(code): code simplification and tests added